--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
+        integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
     <title>FETCH</title>
 </head>
 
@@ -18,11 +20,13 @@
             <h2 class="quote"></h2>
             <h3 class="author"></h3>
         </div>
-        <div>
+        <div class="btn-link">
             <button class="trigger"> Random quote </button>
-            <a href="#" target="_blank" class="tweet"><i class="fa fa-lg fa-twitter"></i> Tweet</a>
+            <button class="trigger"> <a href="#" target="_blank" class="tweet"><i class="fab fa-twitter"></i>
+                    Tweet</a></button>
         </div>
     </main>
+
     <script src="js/script.js"></script>
 </body>
 
